--- a/PYJ_Publish/App.config
+++ b/PYJ_Publish/App.config
@@ -3,4 +3,8 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6" />
     </startup>
+  <appSettings>
+    <add key="procName" value="SisHmi" />
+    <add key="uri" value="http://128.131.136.4/file/sishmi.zip" />
+  </appSettings>  
 </configuration>
