전용망, 레벨2망 만족 로직

--- a/PYJ_Publish/App.config
+++ b/PYJ_Publish/App.config
@@ -6,5 +6,6 @@
   <appSettings>
     <add key="procName" value="SisHmi" />
     <add key="uri" value="http://128.131.136.4/file/sishmi.zip" />
+    <add key="uri2" value="http://192.168.79.46/file/sishmi.zip" />
   </appSettings>  
 </configuration>
